--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     {name = "Your Name", email = "you@example.com"},
 ]
 dependencies = [
+    "litellm>=1.0.0",
 ]
 requires-python = ">=3.8"
 
@@ -16,8 +17,13 @@ build-backend = "hatchling.build"
 [tool.rye]
 managed = true
 dev-dependencies = [
+    "pytest>=7.0.0",
+    "pytest-mock>=3.0.0",
 ]
 
 [tool.hatch.metadata]
 allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
 
